# G1-navigation

./: .gitignore  README.md  readme.md
End2end-ObjectNav-Physical-Experiment/: .gitignore  README.md  system_bagfile.sh  system_bagfile_with_exploration_planner.sh  system_bagfile_with_route_planner.sh  system_real_robot.sh  system_real_robot_with_exploration_planner.sh  system_real_robot_with_route_planner.sh  system_simulation.sh  system_simulation_with_exploration_planner.sh  system_simulation_with_route_planner.sh
End2end-ObjectNav-Physical-Experiment-unitree_g1/: .gitignore  CLAUDE.md  G1_ACTUAL_TOPICS.md  G1_DEPLOYMENT_GUIDE.md  PROJECT_DOCUMENTATION.md  PROJECT_IO_ANALYSIS.md  README.md  fenxi  go2_sbus_control.py  instruction.txt  slam_prac.ini  start_simulation_fixed.sh  system_real_robot.sh  system_real_robot_g1_bridge.sh  system_real_robot_with_exploration_planner.sh  system_real_robot_with_route_planner.sh
End2end-ObjectNav-Physical-Experiment-unitree_g1/src/unitree_webrtc_ros/: README.md
End2end-ObjectNav-Physical-Experiment-unitree_g1/tools/: analyze_g1_slam_bag.py
End2end-ObjectNav-Physical-Experiment/docker/: .dockerignore  Dockerfile  README.md
g1_ros_package/: .gitignore  README.md  build.sh  frames_2025-11-04_16.53.31.gv
g1_ros_package/controller/g1_controller/: CMakeLists.txt  README.md  SUMMARY.md  package.xml
g1_ros_package/controller/g1_controller/launch/: cmd_vel_to_g1.launch.py
g1_ros_package/controller/g1_controller/src/: cmd_vel_to_g1 (副本).cpp  cmd_vel_to_g1.cpp
(+86 files in other folders)
